Implement In-Place FFT with Pre-computed Twiddle Factors (#123)